--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/scss/style.css">
 </head>
 <body>
     <header>
@@ -13,13 +16,173 @@
                 <i class="fa-sharp fa-solid fa-arrow-left"></i>
             </div>
             <div class="logo"> 
-                <img src="">
+                <img src="/assets/images/logo/ohmyfood.png">
             </div>
         </div>
     </header>
     <main>
+        <section class="all">
+            <div>
+                <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+            </div>
+            <div>
+                <div class="menu">
+                    <div>
+                        <h1>Le délice des sens</h1>
+                    </div>
+                    <div>
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                </div>
+                <div>
+                    <h2>Entrées</h2>
+                </div>
+                <div class="menu-cards">
+                    <div>
+                        <div>
+                            <h2>Tartare e thon</h2>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div>
+                            <p>25€</p>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h2>Tartare e thon</h2>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div>
+                            <p>25€</p>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h2>Tartare e thon</h2>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div>
+                            <p>25€</p>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-circle-check"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Plats</h2>
+            </div>
+            <div class="menu-cards">
+                <div>
+                    <div>
+                        <h2>Tartare e thon</h2>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div>
+                        <p>25€</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Tartare e thon</h2>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div>
+                        <p>25€</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Tartare e thon</h2>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div>
+                        <p>25€</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Desserts</h2>
+            </div>
+            <div class="menu-cards">
+                <div>
+                    <div>
+                        <h2>Tartare e thon</h2>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div>
+                        <p>25€</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Tartare e thon</h2>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div>
+                        <p>25€</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h2>Tartare e thon</h2>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div>
+                        <p>25€</p>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <div>
+                            <h2>Commander</h2>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
+        <div>
+            <div>
+                <img src="assets/images/logo/ohmyfood.png">
+            </div>
+            <div>
+                <div><i class="fa-solid fa-utensils"></i></div>
+                <a href="#">Proposer un restaurant</a>
+            </div>
+            <div>
+                <div><i class="fa-solid fa-handshake-angle"></i></div>
+                <a href="#">Devenir partenaire</a>
+            </div>
+            <a href="#">Mentions légales</a>
+            <a href="#">contact</a>
+        </div>
     </footer>   
 </body>
 </html>
