--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </div>
             </a>       
         </section>
-        <section class="fonctionnement">
+        <section class="allFonctionnement">
             <div>
                 <h1>Fonctionnement</h1>
             </div>
@@ -49,10 +49,10 @@
                 <div class="sectionBtn">
                     <div class="ellips">1</div>
                     <div class="btn-fonct">
-                        <div>
+                        <div class="btn-fonctL">
                             <i class="fa-solid fa-mobile-screen-button"></i>
                         </div>
-                        <div>
+                        <div class="btn-fonctR">
                             <h3>Choisissez un restaurant</h3>
                         </div>
                     </div>
@@ -60,10 +60,10 @@
                 <div class="sectionBtn">
                     <div class="ellips">2</div>
                     <div class="btn-fonct">
-                        <div>
+                        <div class="btn-fonctL">
                             <i class="fa-solid fa-list"></i>
                         </div>
-                        <div>
+                        <div class="btn-fonctR">
                             <h3>Composez votre menu</h3>
                         </div>
                     </div>
@@ -71,10 +71,10 @@
                 <div class="sectionBtn">
                     <div class="ellips">3</div>
                     <div class="btn-fonct">
-                        <div>
+                        <div class="btn-fonctLD">
                             <i class="fa-sharp fa-solid fa-store"></i>
                         </div>
-                        <div>
+                        <div class="btn-fonctR">
                             <h3>Dégustez au restaurant</h3>
                         </div>
                     </div>
@@ -93,12 +93,14 @@
                            <p>Nouveau</p>
                         </div>
                         <div class="d-card">
-                            <div>
+                            <div class="dLeft">
                                 <h2>La palette du goût</h2>
                                 <p>Ménilmontant</p>
                             </div>
-                            <div>
-                                <i class="fa-regular fa-heart"></i>
+                            <div class="heart">
+                                <svg xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.2208 2.40551L12.2206 2.40576L11.3741 3.35732L11.0005 3.77727L10.627 3.35732L9.78047 2.40576L9.77992 2.40514C7.78271 0.152585 4.59762 -0.169649 2.47664 1.80201C-0.0175439 4.1245 -0.15494 8.32357 2.0848 10.8495L10.399 20.2148C10.399 20.2149 10.399 20.2149 10.3991 20.2149C10.7372 20.5955 11.2595 20.5955 11.5977 20.2149C11.5977 20.2149 11.5978 20.2149 11.5978 20.2148L19.9122 10.8493L19.9123 10.8492C22.1559 8.32335 22.0186 4.12461 19.5245 1.80213L12.2208 2.40551ZM12.2208 2.40551C14.2226 0.15233 17.4035 -0.169452 19.5243 1.80187L12.2208 2.40551Z" stroke="#101010"/>
+                                  </svg>
                             </div>
                         </div>
                     </div>   
@@ -112,7 +114,7 @@
                            <p>Nouveau</p>
                         </div>
                         <div class="d-card">
-                            <div>
+                            <div class="dLeft">
                                 <h2>La note enchantée</h2>
                                 <p>Charonne</p>
                             </div>
@@ -129,7 +131,7 @@
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
                         
                         <div class="d-card">
-                            <div>
+                            <div class="dLeft">
                                 <h2>À la française</h2>
                                 <p>Cité Rouge</p>
                             </div>
@@ -146,7 +148,7 @@
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
                         
                         <div class="d-card">
-                            <div>
+                            <div class="dLeft">
                                 <h2>Le délice des sens</h2>
                                 <p>Folie-Méricourt</p>
                             </div>
@@ -162,18 +164,20 @@
     <footer>
         <div class="sectionftr">
             <div class="footerLogo">
-                <img src="assets/images/logo/ohmyfood@2x.svg">
+                <img src="assets/images/logo/ohmyfoodwhite.svg">
             </div>
             <div>
-                <div><i class="fa-solid fa-utensils"></i></div>
-                <a href="#">Proposer un restaurant</a>
+                <div class="footerlink1">
+                    <div><i class="fa-solid fa-utensils"></i></div>
+                    <a href="#">Proposer un restaurant</a>
+                </div>
+                <div class="footerlink2">
+                    <div><i class="fa-solid fa-handshake-angle"></i></div>
+                    <a href="#">Devenir partenaire</a>
+                </div>
+                <a href="#">Mentions légales</a><br>
+                <a href="#">contact</a> 
             </div>
-            <div>
-                <div><i class="fa-solid fa-handshake-angle"></i></div>
-                <a href="#">Devenir partenaire</a>
-            </div>
-            <a href="#">Mentions légales</a>
-            <a href="#">contact</a>
         </div>
     </footer>   
 </body>
