--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -91,7 +91,7 @@
                                 <h2>Filet de bœuf aux herbes</h2>
                                 <p>Accompagné de sa ribambelle de légumes</p>
                             </div>
-                            <div class="prix">
+                            <div class="prix" tabindex="0">
                                 <p>40€</p>
                             </div>
                             <div class="valide">
@@ -99,11 +99,11 @@
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div class="secleft">
+                            <div class="secleft" tabindex="0">
                                 <h2>Parmentier de queue de bœuf</h2>
                                 <p>À la truffe noire sur sa purée de panais</p>
                             </div>
-                            <div class="prix">
+                            <div class="prix" tabindex="0">
                                 <p>35€</p>
                             </div>
                             <div class="valide">
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="card-solo">
-                            <div class="secleft">
+                            <div class="secleft" tabindex="0">
                                 <h2>Filet de turbot</h2>
                                 <p>Aux agrumes</p>
                             </div>
