--- a/pages/menu_4.html
+++ b/pages/menu_4.html
@@ -150,7 +150,7 @@
                         <div class="card-solo">
                             <div class="secleft">
                                 <h2>Tartare e thon</h2>
-                                <p>Assaisonné au yuzu</p>
+                                <p>Assaisonné au yuzuuuuuuuuuuuuuuuuuuu</p>
                             </div>
                             <div class="prix">
                                 <p>25€</p>
@@ -169,26 +169,24 @@
     </main>
     <footer>
         <div class="sectionftr">
-            <div class="sectionftr">
-                <div class="footerLogo">
-                    <img src="/assets/images/logo/ohmyfoodwhite.svg">
+            <div class="footerLogo">
+                <img src="/assets/images/logo/ohmyfoodwhite.svg">
+            </div>
+            <div class="allFooterLink">
+                <div class="footerlink1">
+                    <div><i class="fa-solid fa-utensils"></i></div>
+                    <a href="#">Proposer un restaurant</a>
                 </div>
-                <div class="allFooterLink">
-                    <div class="footerlink1">
-                        <div><i class="fa-solid fa-utensils"></i></div>
-                        <a href="#">Proposer un restaurant</a>
-                    </div>
-                    <div class="footerlink2">
-                        <div><i class="fa-solid fa-handshake-angle"></i></div>
-                        <a href="#">Devenir partenaire</a>
-                    </div>
-                    <div class="footerlink3">
-                        <a href="#">Mentions légales</a><br>
-                        <a href="#">contact</a>
-                    </div> 
+                <div class="footerlink2">
+                    <div><i class="fa-solid fa-handshake-angle"></i></div>
+                    <a href="#">Devenir partenaire</a>
                 </div>
+                <div class="footerlink3">
+                    <a href="#">Mentions légales</a><br>
+                    <a href="#">contact</a>
+                </div> 
             </div>
         </div>
-    </footer>
+    </footer>   
 </body>
 </html>
