--- a/pages/menu_1.html
+++ b/pages/menu_1.html
@@ -36,8 +36,9 @@
                     <div class="menu-titre">
                         <h1 class="fontSpecial">La palette du goût</h1>
                     </div>
-                    <div>
-                        <i class="fa-regular fa-heart"></i>
+                    <div class=>
+                        <i class="fa-regular fa-heart heart "></i>
+                        <i  class="fa-solid fa-heart heartColore "></i>
                     </div>
                 </div>
                 <div>
