--- a/pages/menu_2.html
+++ b/pages/menu_2.html
@@ -32,8 +32,9 @@
                     <div class="menu-titre">
                         <h1>Le délice des sens</h1>
                     </div>
-                    <div>
-                        <i class="fa-regular fa-heart"></i>
+                    <div class=>
+                        <i class="fa-regular fa-heart heart "></i>
+                        <i  class="fa-solid fa-heart heartColore "></i>
                     </div>
                 </div>
                 <div>
